--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@
 default: &default
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  encoding: utf8mb4
   timeout: 5000
 
 development:
@@ -22,4 +23,8 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: conduit-api_production
+  username: <%= ENV["DB_NAME"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
+  host: <%= ENV["DB_HOST"] %>
+  adapter: mysql2
