--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Deploy in Amazon EC2
+      - name: Deploy in Amazon EC2 Server 1
         env:
           PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY}}
           HOSTNAME_ONE: ${{secrets.HOSTNAME_ONE}}
@@ -43,6 +43,7 @@ jobs:
           systemctl restart puma
           '
 
+      - name: Deploy in Amazon EC2 Server 2
         run: |
           echo "$PRIVATE_KEY" > private_key && 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME_TWO} '
